--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!--Fixed header with Logo and nav bar-->
-        <link rel="stylesheet" href="css/style.css">
-        <img src="img/img-tea-cozy-logo.png" alt="Tea Cozy Logo" id="tea-cozy-logo">
-        <nav id="navbar">
-            <ul id="navbar-list">
-                <li class="navbar-links"><a href="#mission">Mission</a></li>
-                <li class="navbar-links"><a href="#featured-tea">Featured Tea</a></li>
-                <li class="navbar-links"><a href="#locations">Locations</a></li>
-            </ul>
-        </nav>
-    </head>
+    <header>
+            <link rel="stylesheet" href="css/style.css">
+            <img src="img/img-tea-cozy-logo.png" alt="Tea Cozy Logo" id="tea-cozy-logo">
+            <div class="empty-space">
+
+            </div>
+            <nav id="navbar">
+                <ul id="navbar-list">
+                    <div class="nav-box">
+                        <li class="navbar-links"><a href="#mission">Mission</a></li>
+                    </div>
+                    <div class="nav-box">
+                        <li class="navbar-links"><a href="#featured-tea">Featured Tea</a></li>
+                    </div>
+                    <div class="nav-box">
+                        <li class="navbar-links"><a href="#locations">Locations</a></li>
+                    </div>
+                </ul>
+            </nav>
+    </header>
     <body>
         <main>
-            <!--Mission background width:1200px height:700px-->
-            <!--Our mission (h2) and text (h4) centered veritcally on top of the background image-->
-
             <section class="main-info" id="mission">
-                <h2 class="section-title">Our Mission</h2>
-                <h4 class="section-desc">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                <div class="mission-container">
+                    <h2 class="section-title">Our Mission</h2>
+                    <h4 class="section-desc">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                </div>
             </section>
-            <!--Tea of the month section (flexbox with 5 images and text associated)-->
             <section class="main-info" id="featured-tea">
                 <h2 class="section-title">Tea of the Month</h2>
                 <h4 class="section-desc">What's steeping at Tea Cozy?</h4>
@@ -48,31 +54,31 @@
                     </div>
                 </div>
             </section>
-            <!--Locations information (flexbox) with 3 separate location boxes-->
             <section class="main-info" id="locations">
-                <h2 class="section-title">Locations</h2>
-                <div class="locations-container">
-                    <div class="locations-box">
-                        <h3 class="locations-name">Downtown</h3>
-                        <h4 class="address">384 West 4th St</h4>
-                        <h4 class="address">Suite 108</h4>
-                        <h4 class="address">Portland, Maine</h4>
-                    </div>
-                    <div class="locations-box">
-                        <h3 class="locations-name">East Bayside</h3>
-                        <h4 class="address">3433 Phisherman's Avenue</h4>
-                        <h4 class="address">(Northwest Corner)</h4>
-                        <h4 class="address">Portland, Maine</h4>
-                    </div>
-                    <div class="locations-box">
-                        <h3 class="locations-name">Oakdale</h3>
-                        <h4 class="address">515 Crescent Avenue</h4>
-                        <h4 class="address">Second Floor</h4>
-                        <h4 class="address">Portland, Maine</h4>
+                <div class="locations-section">
+                    <h2 class="section-title">Locations</h2>
+                    <div class="locations-container">
+                        <div class="locations-box downtown">
+                            <h3 class="locations-name">Downtown</h3>
+                            <h4 class="address">384 West 4th St</h4>
+                            <h4 class="address">Suite 108</h4>
+                            <h4 class="address">Portland, Maine</h4>
+                        </div>
+                        <div class="locations-box east-bayside">
+                            <h3 class="locations-name">East Bayside</h3>
+                            <h4 class="address">3433 Phisherman's Avenue</h4>
+                            <h4 class="address">(Northwest Corner)</h4>
+                            <h4 class="address">Portland, Maine</h4>
+                        </div>
+                        <div class="locations-box oakdale">
+                            <h3 class="locations-name">Oakdale</h3>
+                            <h4 class="address">515 Crescent Avenue</h4>
+                            <h4 class="address">Second Floor</h4>
+                            <h4 class="address">Portland, Maine</h4>
+                        </div>
                     </div>
                 </div>
             </section>
-            <!--Name and contact information-->
             <section class="main-info" id="contact">
                 <h2 class="section-title">The Tea Cozy</h2>
                 <h5 class="contact-info" id="email">contact@theteacozy.com</h5>
@@ -80,7 +86,6 @@
             </section>
         </main>
         <footer>
-            <!--Copyright information aligned left-->
             <h5 id="copyright">&copy; The Tea Cozy 2021</h5>
         </footer>
     </body>
